Allow multiple stack invites
